samples/bed/should_pass/3_fields.bed
chr2	1000	5000
chr2	2000	6000
