samples/bed/should_fail/2_fields.bed
chr2	1000
chr2	2000
